edit the html page

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
 </head>
 <body>
   <h1>Hi My Name is Mohamed Ibrahim</h1>
-</body>
+  <h1>My age is 38 years old</h2>
+  <h2>My Birthday on 3 june</h2>
+  <h2>my tall 180 cm</h2>
+  <h1>all above information as example</h1>
+  </body>
 </html>
